refactor: modernize core reactive logic and strengthen model layer cohesion
- Refactor FileStateEngine and FileLogManager to use non-blocking FileSystem API with lazy directory initialization.
- Move business logic (history pruning, pending tool detection, latest message retrieval) from service layer to Turn and SessionContext records.
- Optimize StandardPromptEngine with type-safe Future.join and flattened stream processing for context composition.
- Integrate commonmark-java for robust Markdown parsing and context resolving with GFM table support.
- Refactor ReActAgentLoop with Java 17 switch expressions and cleaned up Lambda-based tool lookup.
- Add @JsonIgnore to internal record methods to ensure stable EventBus/JSON serialization.